Fixing a small problem with alignment

--- a/_sass/_includes/_portfolio.scss
+++ b/_sass/_includes/_portfolio.scss
@@ -10,8 +10,8 @@
 
 .portfolio-wrap {
 max-width: 1500px;	
-margin-left: 5%;
-margin-right: 5%;
+// margin-left: 5%;
+// margin-right: 5%;
 }
 
 .portfolio-item {
